# QtProxyOrm

./: CMakeLists.txt
src/app/: .qmlls.ini  CMakeLists.txt  Main.qml  main.cpp  ordermodel.cpp  ordermodel.h  ordertotalvalue.cpp  ordertotalvalue.h  orderviewmodel.cpp  orderviewmodel.h  staffmodel.cpp  staffmodel.h  usermodel.cpp  usermodel.h
src/proxyorm/: CMakeLists.txt  aggregatebyjoin.cpp  aggregatebyjoin.h  aggregatebyrow.cpp  aggregatebyrow.h  case.cpp  case.h  fromsource.cpp  fromsource.h  indexedabstractmodel.h  isource.cpp  isource.h  join.cpp  join.h  joinindexed.cpp  joinindexed.h  orwhere.cpp  orwhere.h  proxyormmodel.cpp  proxyormmodel.h  proxyormvalue.cpp  proxyormvalue.h  sort.h  where.cpp  where.h
src/tests/: CMakeLists.txt
src/tests/Benchmark/: CMakeLists.txt  tst_benchmark.cpp
src/tests/TestProxyOrmModel/: CMakeLists.txt  tst_testaggregatebyrow.cpp  tst_testcase.cpp  tst_testfromsource.cpp  tst_testjoin.cpp  tst_testjoinindexed.cpp  tst_testproxyormmodel.cpp
src/tests/TestProxyOrmValue/: CMakeLists.txt  tst_testproxyormvaluetest.cpp
src/tests/TestWhere/: CMakeLists.txt  tst_testwhere.cpp
src/tests/src/: standardlistmodel.cpp  standardlistmodel.h
